feat: dev 프로파일 추가 (#54)
* feat: dev 환경 배포를 위한 프로파일 분리

* test: 쿠폰 삭제 테스트 추가