@@ -16,8 +16,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import java.math.BigDecimal;
 import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.*;
 
 class CouponServiceTest extends IntegrationTest {
 
@@ -34,7 +33,6 @@ class CouponServiceTest extends IntegrationTest {
 
     @Nested
     class 쿠폰생성 {
-
         @Test
         void 성공한다() {
             // given
@@ -80,7 +78,6 @@ class CouponServiceTest extends IntegrationTest {
 
         @Nested
         class 쿠폰발급 {
-
             @Test
             void 성공한다() {
                 // given
@@ -118,7 +115,7 @@ class CouponServiceTest extends IntegrationTest {
                 // then
                 List<IssuedCoupon> issuedCoupons = issuedCouponRepository.findAll();
                 assertEquals(1, issuedCoupons.size());
-                assertEquals(1L, issuedCoupons.getFirst().getMember().getId());
+                assertEquals(1L, issuedCoupons.get(0).getMember().getId());
             }
 
             @Test
@@ -133,6 +130,78 @@ class CouponServiceTest extends IntegrationTest {
                         () -> couponService.createIssuedCoupon(couponIssueRequest));
                 assertEquals(ErrorCode.COUPON_NOT_FOUND, exception.getErrorCode());
             }
+        }
+    }
+
+    @Nested
+    class 쿠폰삭제 {
+        @Test
+        void 성공한다() {
+            // given
+            CouponCreateRequest request = new CouponCreateRequest("삭제테스트쿠폰", BigDecimal.valueOf(5000));
+            couponService.createCoupon(request);
+            Coupon coupon = couponRepository.findAll().get(0);
+
+            // when
+            couponService.deleteCoupon(coupon.getId());
+
+            // then
+            assertTrue(couponRepository.findById(coupon.getId()).isEmpty());
+        }
+
+        @Test
+        void 존재하지_않는_쿠폰이면_실패한다() {
+            // when-then
+            CustomException exception = assertThrows(CustomException.class,
+                    () -> couponService.deleteCoupon(999L));
+            assertEquals(ErrorCode.COUPON_NOT_FOUND, exception.getErrorCode());
+        }
+
+        @Test
+        void 발급된_쿠폰이_존재하면_삭제에_실패한다() {
+            // given
+            createMember(); // 존재하는 멤버 생성 (예: id=1)
+            CouponCreateRequest request = new CouponCreateRequest("발급된쿠폰테스트", BigDecimal.valueOf(5000));
+            couponService.createCoupon(request);
+
+            // 쿠폰 발급: coupon id 1, member id 1
+            CouponIssueRequest issueRequest = new CouponIssueRequest(1L, List.of(1L));
+            couponService.createIssuedCoupon(issueRequest);
+
+            // when-then
+            CustomException exception = assertThrows(CustomException.class,
+                    () -> couponService.deleteCoupon(1L));
+            assertEquals(ErrorCode.COUPON_ISSUED_COUPON_EXISTS, exception.getErrorCode());
+        }
+    }
+
+    @Nested
+    class 발급된_쿠폰삭제 {
+        @Test
+        void 성공한다() {
+            // given
+            createMember();
+            CouponCreateRequest couponRequest = new CouponCreateRequest("발급쿠폰삭제테스트", BigDecimal.valueOf(5000));
+            couponService.createCoupon(couponRequest);
+
+            // 쿠폰 발급: coupon id 1, member id 1
+            CouponIssueRequest issueRequest = new CouponIssueRequest(1L, List.of(1L));
+            couponService.createIssuedCoupon(issueRequest);
+            IssuedCoupon issuedCoupon = issuedCouponRepository.findAll().get(0);
+
+            // when
+            couponService.deleteIssuedCoupon(issuedCoupon.getId());
+
+            // then
+            assertTrue(issuedCouponRepository.findById(issuedCoupon.getId()).isEmpty());
+        }
+
+        @Test
+        void 존재하지_않는_발급된_쿠폰이면_실패한다() {
+            // when-then
+            CustomException exception = assertThrows(CustomException.class,
+                    () -> couponService.deleteIssuedCoupon(999L));
+            assertEquals(ErrorCode.ISSUED_COUPON_NOT_FOUND, exception.getErrorCode());
         }
     }
 }
